<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="re_calculate_your_bmi">Re-Calculate Your BMI</string>
    <string name="_180">180</string>
</resources>