<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/male_femaile"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/male_femaile"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/man" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/male" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/male_femaile"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/women" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/female" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/main"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/male_femaile"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/f"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/f"
            android:text="@string/_180"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:progressDrawable="@drawable/seekbar_style"
            android:thumb="@drawable/custom_thumb" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/male_femaile"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/f"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@color/white" />

            <TextView

                android:id="@+id/textView_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/f"
                android:gravity="center"
                android:text="40"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_decrement_women"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_minus">

                </de.hdodenhof.circleimageview.CircleImageView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_increment_weight"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_add">

                </de.hdodenhof.circleimageview.CircleImageView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/male_femaile"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/f"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@color/white" />

            <TextView

                android:id="@+id/textView_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/f"
                android:gravity="center"
                android:text="40"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_age_decrement"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_minus">

                </de.hdodenhof.circleimageview.CircleImageView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_age_increment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_add">

                </de.hdodenhof.circleimageview.CircleImageView>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button"
            android:text="@string/calculate_your_bmi"
            app:backgroundTint="@color/blue" />
    </LinearLayout>
</RelativeLayout>